# xarillian.com

./: .gitignore  .pylintrc  404.html  CNAME  LICENSE  README.md  TODO.md  about.html  ai.txt  app.py  appspec.yml  buildspec.yml  config.py  const.py  generate.py  index.html  llms.txt  pyproject.toml  requirements.txt  robots.txt  run.py  wsgi.py  xarillian.com.conf
.ebextensions/: 01_flask.config  use_launch_template.config
.github/workflows/: deploy.yml
about/: index.html
app/: __init__.py  blog.py  consts.py  frontmatter.py  routes.py  utils.py
app/prebuild/: bundle_css.py  prebuild_blog.py
app/static/: layout.css  sitemap.xml  styles.css  wiki-style-layout.css
app/templates/: 404.html  about.html  base.html  blog.html  header.html  index.html  post.html  tagged_posts.html  tags.html
app/utils/: common.py  frontmatter.py
blog/: index.html
blog/bingo-2025/: index.html
blog/bingo-2025-complete/: index.html
blog/bingo-2026/: index.html
blog/gdllama-1-postmortem/: index.html
blog/orchestrion-1/: index.html
blog/stellaris-mod/: index.html
content/: orchestrion-1.md  stellaris-mod.md
pages/: about.md
scripts/: before_install.sh  install.sh  install_application.sh  start_application.sh  stop_application.sh
ssg/: blog.py  bundle_css.py  config.py  generate.py  render.py
static/: animations.css  layout.css  sitemap.xml  styles.css
styles/: bundle.css  components.css  layout.css
tags/: index.html
templates/: 404.html  _blog.html  about.html  base.html  blog.html  header.html  index.html  post.html  tagged_posts.html  tags.html
(+43 files in other folders)
